got rid off all the front end, fuck you angular, i'll code a framework myself

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
   <!-- Compiled and minified CSS -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="{% static '/css/materialze.min.css' %}">
 </head>
 <body>
 
@@ -18,5 +18,5 @@
 
 </body>
 	<!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="{% static '/js/materialze.min.js' %}"></script>
 </html>
