--- a/templates/panel.html
+++ b/templates/panel.html
@@ -1,6 +1,2 @@
-{% extends 'base.html' %}
-{% load static %}
-
-{% block content %}
-<h1> Login Complete </h1>
-{% endblock %}
+<h3> login done </h3>
+<p> yay </p> <a href="{% url 'logout' %}"> logout</a>
